# atlas-backend-v1

./: .gitignore  main.py  pyproject.toml
.cursor/commands/: git-commit.md
.cursor/rules/: oncoligst_prompt_engineer.mdc  oncologist.mdc
journal/: 2025-10-25-text-extraction-service-foundation.md  README.md
scripts/synthetic_patient_generation/: __init__.py  generate_cohort.py
src/config/: logging.py  settings.py
src/schemas/: text_extraction.py  v1_vae_patient_extraction.py
src/services/synthetic_patient/: README.md  __init__.py  service.py
src/services/synthetic_patient/embedders/: __init__.py  base.py  medembed.py  openai.py
src/services/text_extraction/: service.py
src/services/text_extraction/ocr/: azure.py  base.py  mock.py
src/utils/: paths.py  text_cleaning.py  tokens.py
tests/: conftest.py
tests/fixtures/: text_extraction.py
tests/integration/patient_status/: test_diagnosis_data.py  test_disease_data.py  test_lines_of_therapy.py  test_molecular_findings.py  test_synthetic_vae_generation.py  test_vae_structure.py
tests/integration/text_extraction/: test_pdf_azure_integration.py
tests/text_extraction/: test_pdf.py
tests/unit/document_enhancement/: test_document_enhancement.py
tests/unit/patient_status/: test_lines_of_therapy.py
tests/unit/text_extraction/: test_html.py  test_pdf.py  test_plain_text.py
