[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "azure-ai-documentintelligence>=1.0.0b4",
    "beautifulsoup4>=4.12.0",
    "ftfy>=6.2.0",
    "openai>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "pydantic-settings>=2.11.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
# Show log output during test execution
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%H:%M:%S"